--- a/app/src/main/res/layout/item_bill_line.xml
+++ b/app/src/main/res/layout/item_bill_line.xml
@@ -87,22 +87,9 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerViewKitList" />
+        app:layout_constraintStart_toStartOf="parent"/>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewKitList"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textLineNumber"
-        app:layout_constraintTop_toBottomOf="@+id/textLineName"
-        tools:listitem="@layout/item_kit_line" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
