--- a/app/src/main/res/layout/item_new_order_line.xml
+++ b/app/src/main/res/layout/item_new_order_line.xml
@@ -5,18 +5,19 @@
     android:id="@+id/linearLayout4"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/_6sdp"
     android:background="@drawable/line_preview_background">
 
     <TextView
         android:id="@+id/textNameAssortment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
         android:gravity="center_vertical"
         android:text="name"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall"
-        android:textSize="22sp"
+        android:textSize="@dimen/_12sdp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/textCount"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,29 +27,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:minWidth="@dimen/_25sdp"
-        android:maxWidth="@dimen/_45sdp"
-        android:text="count"
-        android:textColor="@color/counts"
-        android:textSize="@dimen/_12ssp"
         android:gravity="right"
+        android:text="count"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_12sdp"
         app:layout_constraintBottom_toBottomOf="@+id/textNameAssortment"
         app:layout_constraintEnd_toStartOf="@+id/textPrice"
         app:layout_constraintTop_toTopOf="@+id/textNameAssortment" />
 
     <TextView
         android:id="@+id/textPrice"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/_46sdp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:gravity="right"
-        android:minWidth="@dimen/_25sdp"
-        android:maxWidth="@dimen/_45sdp"
         android:text="price"
-        android:textColor="@android:color/holo_red_light"
-        android:textSize="@dimen/_12ssp"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_12sdp"
         app:layout_constraintBottom_toBottomOf="@+id/textNameAssortment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textNameAssortment" />
+
+    <View
+        android:id="@+id/divider7"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
