--- a/app/src/main/res/layout/activity_add_client.xml
+++ b/app/src/main/res/layout/activity_add_client.xml
@@ -27,7 +27,7 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:gravity="center"
-            android:hint="Introduceți codul cardului"
+            android:hint="@string/introduce_codul_cardului"
             android:inputType="number"
             android:padding="8dp"
             android:textColor="@color/black"
@@ -84,7 +84,7 @@
         android:layout_marginBottom="16dp"
         android:paddingStart="@dimen/_8sdp"
         android:paddingEnd="@dimen/_8sdp"
-        android:text="Aplica"
+        android:text="@string/aplica"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="Codul scanat:"
+        android:text="@string/codul_scanat"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
@@ -131,7 +131,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:text="Aplica cardul clientului la \nmodulul NFC a dispozitivului."
+        android:text="@string/aplica_cardul_clientului_la_nmodulul_nfc_a_dispozitivului"
         android:textColor="@color/black"
         android:textSize="@dimen/_12ssp"
         app:layout_constraintEnd_toEndOf="parent"
