--- a/app/src/main/res/layout/dialog_license.xml
+++ b/app/src/main/res/layout/dialog_license.xml
@@ -14,7 +14,7 @@
         android:layout_weight="1"
         android:background="@drawable/line_gray_transparent_background"
         android:gravity="center"
-        android:hint="Introduceți codul de activare"
+        android:hint="@string/introduce_i_codul_de_activare"
         android:inputType="number"
         android:padding="8dp"
         android:textColor="@color/black"
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="Activeaza aplicatia"
+        android:text="@string/activeaza_aplicatia"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -47,7 +47,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:gravity="center"
-        android:text="Comunicați codul primit de la provider-ul de aplicație pentru activarea aplicației."
+        android:text="@string/comunica_i_codul_primit_de_la_provider_ul_de_aplica_ie_pentru_activarea_aplica_iei"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextCode"
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Codul de activare este incorect."
+        android:text="@string/codul_de_activare_este_incorect"
         android:textColor="@android:color/holo_red_dark"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="Renunță"
+        android:text="@string/renun"
         android:clickable="true"
         android:textColor="@color/black"
         android:textSize="20sp"
