--- a/app/src/main/res/layout/item_bill_line.xml
+++ b/app/src/main/res/layout/item_bill_line.xml
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
-        android:text="Statut:"
+        android:text="@string/statut"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textLineName" />
@@ -77,7 +77,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/textLineSumdfsfd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textLineSumdfsfd"
-        tools:text="Statut:" />
+        tools:text="@string/statut" />
 
     <View
         android:id="@+id/divider7"
